<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintDimensionRatio="1.15:1"
        android:elevation="6dp"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:id="@+id/bar_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
...
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp" />

            <ImageButton
                android:id="@+id/statisticsButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toLeftOf="@+id/accountsButton"
                android:layout_marginRight="6dp"
                app:srcCompat="@drawable/ic_data_usage_black_24dp"

...
            android:layout_below="@id/accountViewPager"
            app:tabBackground="@drawable/tab_selector"
            android:layout_centerHorizontal="true"
            app:tabIndicatorHeight="0dp"/>

        <Button
            android:id="@+id/payment_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accounts_tabDots"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/selector_confirm_button"
...
            android:textColor="@color/gray_message"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/welcome_card"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:text="@string/welcome_message_h3"/>

        <Button
            android:id="@+id/welcome_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
...
