<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="6dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="6dp">

    <RadioGroup
        android:id="@+id/period_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/period_1_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="День"/>

        <RadioButton
            android:id="@+id/period_2_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            tools:text="Неделя"/>

        <RadioButton
            android:id="@+id/period_3_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            tools:text="Месяц"/>

        <RadioButton
            android:id="@+id/period_4_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            tools:text="Все время"/>

    </RadioGroup>

</LinearLayout>