<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/statistics_scroll_children_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Button
                    android:id="@+id/expenses_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="30dp"
                    android:minWidth="90dp"
                    android:background="@drawable/bg_card_black"
                    android:textColor="@color/white"
                    android:layout_centerVertical="true"
                    android:text="@string/expenses_button_label_text"/>

                <Button
                    android:id="@+id/income_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="90dp"
                    android:layout_marginLeft="6dp"
                    android:layout_centerVertical="true"
                    android:minHeight="30dp"
                    android:layout_toRightOf="@id/expenses_btn"
                    android:background="@drawable/bg_card_white"
                    android:text="@string/income_button_label_text"
                    android:layout_marginStart="6dp"
                    android:layout_toEndOf="@id/expenses_btn" />

                <TextView
                    android:id="@+id/period_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Последняя неделя"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/chart_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="4dp"
                android:background="@color/white">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="center"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/transactions_recycler_view"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:layoutAnimation="@anim/layout_animation_from_right"
                    tools:ignore="PrivateResource">

                </android.support.v7.widget.RecyclerView>

            </FrameLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>